# zero-trust-agent-demo

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  CONTRIBUTING.md  DEMO_GUIDE.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-push.yaml
agent-service/: Dockerfile  main.go
agent-service/cmd/: root.go  serve.go
credential-gateway/: Dockerfile  main.go
credential-gateway/cmd/: root.go  serve.go
docs/: ARCHITECTURE.md  AUTHBRIDGE.md  AUTHBRIDGE_INTEGRATION_LEARNING.md  DEMO_GUIDE.md  DEMO_SCENARIOS.md  DIAGRAMS.md  KEYCLOAK_TOKEN_EXCHANGE_SETUP.md  LEARNING_GUIDE.md  OPERATIONS.md  POLICY_REFERENCE.md  README.md  SECURITY.md  ZERO_TRUST_OPENSHIFT.md
document-service/: Dockerfile  config.yaml.example  main.go
kagenti-reviewer/: Dockerfile  agent-card.json  agent.py  llm.py  pyproject.toml  reviewer.py
kagenti-summarizer/: Dockerfile  agent-card.json  agent.py  llm.py  main.py  pyproject.toml  summarizer.py
kagenti-summarizer/tests/: test_llm.py  test_summarizer.py
learn/: README.md
opa-service/: Dockerfile  main.go
reviewer-service/: Dockerfile  main.go
scripts/: build-images.sh  demo-credential-gateway.sh  deploy-app.sh  keycloak-post-import.sh  load-images.sh  port-forward.sh  run-local.sh  seed-s3.sh  setup-authbridge.sh  setup-aws-iam.sh  setup-kind.sh  setup-openshift-authbridge.sh  test-authbridge.sh  test-credential-gateway.sh  test-s3-storage.sh
summarizer-service/: Dockerfile  main.go
user-service/: Dockerfile  main.go
web-dashboard/: Dockerfile  main.go
zt-agent/: Dockerfile  main.go
zt-monitor/: main.go
(+271 files in other folders)
