[project]
name = "kagenti-summarizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.25",
    "anthropic>=0.85.0",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
